--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,15 @@ sudo: false
 language: python
 
 python:
-  - "2.7"
-  - "3.3"
   - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8"
 
 matrix:
-  include:
-    - python: "2.7"
-      env: MODE=flake8
   allow_failures:
-    - env: MODE=flake8
+    - MODE=flake8
 
 cache:
   directories:
