--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py34,py33,py27,py27flake8
+envlist = py34,py35,py36,py37,py38,py38flake8
 
 [testenv]
 commands =
@@ -7,16 +7,7 @@ commands =
 deps =
     coverage
 
-[testenv:py34]
-basepython = python3.4
-
-[testenv:py33]
-basepython = python3.3
-
-[testenv:py27]
-basepython = python2.7
-
-[testenv:py27flake8]
+[testenv:py38flake8]
 commands =
     {envbindir}/flake8 --ignore=E128 --max-complexity 10 .
 deps =
